source/styles/ids/panel.scss
#panel {
  pointer-events: none;
}

#panel-outer {
  position: relative;
  display: grid;
  place-items: center;
  width: 100%;
  height: 100%;
  transition: .3s opacity;
  z-index: 100;
}

#panel-cover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(white, .8);
  cursor: pointer;
}

#panel-frame {
  position: relative;
}

#panel-close {
  position: absolute;
  width: 32px;
  height: 32px;
  top: -8px;
  left: -8px;
  z-index: 101;
}

